--- a/app/views/compras/lineasOrdenes/formLineaProducto.scala.html
+++ b/app/views/compras/lineasOrdenes/formLineaProducto.scala.html
@@ -1,6 +1,6 @@
 @(lineaForm: Form[OrdenLinea],linea:OrdenLinea)
 @import helper._
-@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) } 
+@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) }
 
 @if(flash.containsKey("error")) {
 	<div class="alert alert-danger">
@@ -20,7 +20,7 @@ $(function(){
 	<div class="col-sm-8">
 		<label for="producto_nombre" class="control-label">Producto</label>
 		<div class="input-group @if(lineaForm.error("producto_id") != null) {has-error} else {has-required}">
-			
+
 			@inputText(lineaForm("producto.nombre"), 'class -> "form-control", 'autofocus -> "autofocus", 'id -> "producto")
 			@inputText(lineaForm("producto_id"), 'hidden -> "hidden", 'id -> "producto_id")
 			<span class="input-group-addon"><a href="#" id="searchProducto" data-title="Selección de producto" data-url="@controllers.compras.routes.ProductosController.modalBuscar()" data-height="650" data-width="700" data-listen="modal.seleccion.producto.simple" data-label="#producto" data-field="#producto_id"><i class="glyphicon glyphicon-search"></i></a></span>
@@ -35,14 +35,14 @@ $(function(){
 			@inputText(lineaForm("departamento.nombre"), 'class -> "form-control", 'id -> "departamento")
 			@inputText(lineaForm("departamento_id"), 'hidden -> "hidden", 'id -> "departamento_id")
 			<span class="input-group-addon">
-				<a href="#" 
-				   id="searchDepartamento" 
+				<a href="#"
+				   id="searchDepartamento"
 				   class="searchModal"
-				   data-title="Selección de Servicio" 
-				   data-url="@controllers.rrhh.routes.DepartamentosController.modalBuscar()" 
-				   data-height="650" 
-				   data-width="700" 
-				   data-listen="modal.seleccion.departamento.simple" 
+				   data-title="Selección de Servicio"
+				   data-url="@controllers.rrhh.routes.DepartamentosController.modalBuscar()"
+				   data-height="650"
+				   data-width="700"
+				   data-listen="modal.seleccion.departamento.simple"
 				   data-label="#departamento" data-field="#departamento_id">
 				   <i class="glyphicon glyphicon-search"></i>
 				 </a>
@@ -55,13 +55,13 @@ $(function(){
 	<div class="col-sm-3">
 		<label class="control-label">Precio</label>
 		<div class="form-group @if(lineaForm.error("precio") != null) {has-error} else {has-required}">
-			
+
 			@inputText(lineaForm("precio"), 'class -> "form-control", 'id -> "precio")
-			
+
 			@lineaForm("precio").error.map{ error => <div class="text-error">@error.message</div>}
 		</div>
 	</div>
-		
+
 	<div class="col-sm-2">
 		<label for="cantidad" class="control-label">Cantidad</label>
 		<div class="form-group @if(lineaForm.error("cantidad") != null) {has-error} else {has-required}">
@@ -83,14 +83,14 @@ $(function(){
 			@inputText(lineaForm("cuentaAnalitica.nombre"), 'class -> "form-control", 'id -> "cuentaAnalitica")
 			@inputText(lineaForm("cuenta_analitica_id"), 'hidden -> "hidden", 'id -> "cuentaAnalitica_id")
 			<span class="input-group-addon">
-				<a href="#" 
-				   id="searchCuentaAnalitica" 
+				<a href="#"
+				   id="searchCuentaAnalitica"
 				   class="searchModal"
-				   data-title="Selección de Cuenta Analitica" 
-				   data-url="@controllers.contabilidad.routes.CuentasAnaliticasController.modalBuscar()" 
-				   data-height="650" 
-				   data-width="700" 
-				   data-listen="modal.seleccion.cuentaAnalitica.simple" 
+				   data-title="Selección de Cuenta Analitica"
+				   data-url="@controllers.contabilidad.routes.CuentasAnaliticasController.modalBuscar()"
+				   data-height="650"
+				   data-width="700"
+				   data-listen="modal.seleccion.cuentaAnalitica.simple"
 				   data-label="#cuentaAnalitica" data-field="#cuentaAnalitica_id">
 				   <i class="glyphicon glyphicon-search"></i>
 				 </a>
@@ -106,21 +106,21 @@ $(function(){
 			@inputText(lineaForm("nota"), 'class -> "form-control", 'id -> "nombre")
 			@lineaForm("nota").error.map{ error => <div class="text-error">@error.message</div>}
 		</div>
-	</div>	
+	</div>
 	<!-- <div class="col-sm-4">
 		<label for="cliente" class="control-label">Paciente</label>
 		<div class="input-group">
 			@inputText(lineaForm("cliente.nombre"), 'class -> "form-control", 'id -> "cliente")
 			@inputText(lineaForm("cliente_id"), 'hidden -> "hidden", 'id -> "cliente_id")
 			<span class="input-group-addon">
-				<a href="#" 
-				   id="searchCliente" 
+				<a href="#"
+				   id="searchCliente"
 				   class="searchModal"
-				   data-title="Selección de paciente" 
-				   data-url="@controllers.compras.routes.ClientesController.modalBuscar()" 
-				   data-height="650" 
-				   data-width="700" 
-				   data-listen="modal.seleccion.cliente.simple" 
+				   data-title="Selección de paciente"
+				   data-url="@controllers.compras.routes.ClientesController.modalBuscar()"
+				   data-height="650"
+				   data-width="700"
+				   data-listen="modal.seleccion.cliente.simple"
 				   data-label="#cliente" data-field="#cliente_id">
 				   <i class="glyphicon glyphicon-search"></i>
 				 </a>
@@ -131,7 +131,7 @@ $(function(){
 		<label for="cliente" class="control-label">&nbsp </label>
 		<div class="input-group">
 			@if(linea != null && linea.ordenLineaCliente != null && linea.id != null){
-				<button type="button" id="addClientes" class="btn btn-default" 
+				<button type="button" id="addClientes" class="btn btn-default"
 				data-url="@controllers.compras.routes.LineasOrdenesController.modalAddClientes(linea.id)">
 				<i class="glyphicon glyphicon-user"></i> Agregar Pacientes
 				</button>
@@ -142,37 +142,59 @@ $(function(){
 
 
 <div class="row">
-	<div class="col-sm-1"></div>
-	<div class="col-sm-10">
-		<table class="table table-striped table-bordered" id="tablaListadoPacientes">	
-			<thead>
-				<tr>
-					<th width="100" align="center">Paciente</th>
-					<th width="30" align="center">Cantidad</th>
-					<th width="30" align="center">#</th>
-				</tr>	
-			</thead>
-			<tbody>
-				@if(linea != null && linea.ordenLineaCliente != null && linea.ordenLineaCliente.size() > 0){
-					@for(olp <- linea.ordenLineaCliente) {
-						<tr>
-							<td>@(olp.cliente.nombre)</td>
-							<td class='cantidadLineaCliente'>@(olp.cantidad)</td>
-							<td>
-								<a data-url="@controllers.compras.routes.OrdenesLineasClientesController.eliminarAjax(olp.id)" class="btn btn-default btn-xs notSeleccion eliminarLineaPaciente" href="#">
-									<i class="glyphicon glyphicon-trash icono-eliminar"></i>
-								</a>
-							</td>
-						</tr>		
-					}
-				}else{
+
+	<div class="col-sm-12">
+		@(linea.orden.proveedor_id)
+		@(models.Proveedor.PACIFIC_OCEAN)
+
+			<table class="table table-striped table-bordered" id="tablaListadoPacientes">
+				<thead>
 					<tr>
-						<td colspan="3">No contiene Pacientes</td>
-					</tr>			
-				}
-			</tbody>
-		</table>
-	</div>	
+						<th width="100" align="center">Paciente</th>
+						<th width="30" align="center">Cant.</th>
+						<th align="center">Fecha</th>
+						<th align="center">IPS</th>
+						<th align="center">Diagnostico</th>
+						<th align="center">Origen</th>
+						<th align="center">Destino</th>
+
+						<th width="30" align="center">#</th>
+					</tr>
+				</thead>
+				<tbody>
+
+					@if(linea != null && linea.ordenLineaCliente != null && linea.ordenLineaCliente.size() > 0){
+						@for(olp <- linea.ordenLineaCliente) {
+							<tr>
+								<td>@(olp.cliente.nombre)</td>
+								<td class='cantidadLineaCliente'>@(olp.cantidad)</td>
+
+								<td class=''>@if(olp.fecha != null){@(utils.DateUtils.formatDate(olp.fecha))}</td>
+								<td class=''>
+									@if(olp.ips != null){
+										@if(olp.ips){SI}else{NO}
+									}
+								</td>
+								<td class=''>@if(olp.diagnostico != null){@(olp.diagnostico)}</td>
+								<td class=''>@if(olp.ida_institucion_externa_id != null){@(olp.idaInstitucionExterna.nombre)}</td>
+								<td class=''>@if(olp.vuelta_institucion_externa_id != null){@(olp.vueltaInstitucionExterna.nombre)}</td>
+
+								<td>
+									<a data-url="@controllers.compras.routes.OrdenesLineasClientesController.eliminarAjax(olp.id)" class="btn btn-default btn-xs notSeleccion eliminarLineaPaciente" href="#">
+										<i class="glyphicon glyphicon-trash icono-eliminar"></i>
+									</a>
+								</td>
+							</tr>
+						}
+					}else{
+						<tr>
+							<td colspan="3">No contiene Pacientes</td>
+						</tr>
+					}
+				</tbody>
+			</table>
+
+	</div>
 </div>
 
 <div class="row margin-top-20">
@@ -183,7 +205,7 @@ $(function(){
 </div>
 <script>
 $( function(){
-	
+
 	$("#tablaListadoPacientes").on( "click",".eliminarLineaPaciente", function() {
 		var url = $(this).attr("data-url");
 		var tr = $(this).closest('tr');
@@ -196,7 +218,7 @@ $( function(){
 					}
 				})
 			}
-			
+
 			if(respuesta){
 				tr.remove();
 				if(!$('.eliminarLineaPaciente').length){
@@ -206,13 +228,13 @@ $( function(){
 			}else{
 				alert('No se puede eliminar el regristro.')
 			}
-		});	
-		
+		});
+
 		return false;
 	});
-	
+
 	$( "#addClientes" ).on( "click", function() {
-		 
+
 		var url = $(this).attr("data-url");
 		var dialogo = $('<div id="modalAddClientes"></div>');
 
@@ -221,8 +243,8 @@ $( function(){
 	    	resizable: false,
 			autoOpen: true,
 			modal: true,
-			height: 250,
-			width:750,
+			height: 450,
+			width:800,
 	        buttons: {
 		          Cerrar: function() {
 		            $( this ).dialog( "destroy" );
@@ -234,12 +256,12 @@ $( function(){
 		    open: function( event, ui ) {
 				$.get(url, function(data){
 					dialogo.html(data);
-				});	
+				});
 		    }
 	    });
 		return false;
 	});
-	
+
 	if($("#producto").length){
 		var options = {
 				script:"/suggestProducto/",
@@ -247,13 +269,13 @@ $( function(){
 				json:true,
 				shownoresults:true,
 				maxresults:6,
-				callback: function (obj) { 
-											$("#producto_id").val(obj.id); 
+				callback: function (obj) {
+											$("#producto_id").val(obj.id);
 										 }
 			};
 		var as_json = new bsn.AutoSuggest('producto', options);
 	}
-	
+
 	if($("#cliente").length){
 		var options = {
 				script:"/suggestCliente/",
@@ -261,13 +283,13 @@ $( function(){
 				json:true,
 				shownoresults:true,
 				maxresults:6,
-				callback: function (obj) { 
-											$("#cliente_id").val(obj.id); 
+				callback: function (obj) {
+											$("#cliente_id").val(obj.id);
 										 }
 			};
 		var as_json = new bsn.AutoSuggest('cliente', options);
 	}
-	
+
 	if($("#departamento").length){
 		var options = {
 				script:"/suggestDepartamento/",
@@ -276,13 +298,13 @@ $( function(){
 				shownoresults:true,
 				maxresults:26,
 				cache:false,
-				callback: function (obj) { 
-											$("#departamento_id").val(obj.id); 
+				callback: function (obj) {
+											$("#departamento_id").val(obj.id);
 										 }
 			};
 		var as_json = new bsn.AutoSuggest('departamento', options);
 	}
-	
+
 	if($("#cuentaAnalitica").length){
 		var options = {
 				script:"/contabilidad/suggestCuentaAnalitica/",
@@ -290,8 +312,8 @@ $( function(){
 				json:true,
 				shownoresults:true,
 				maxresults:6,
-				callback: function (obj) { 
-											$("#cuentaAnalitica_id").val(obj.id); 
+				callback: function (obj) {
+											$("#cuentaAnalitica_id").val(obj.id);
 										 }
 			};
 		var as_json = new bsn.AutoSuggest('cuentaAnalitica', options);
