--- a/app/views/compras/lineasOrdenes/lineaProducto.scala.html
+++ b/app/views/compras/lineasOrdenes/lineaProducto.scala.html
@@ -2,15 +2,42 @@
 
 @getPacientes(linea: OrdenLinea) = @{
 	var pacientes:String = new String()
+	var diagnostico:String = new String()
+	var fecha:String = new String()
+	var ida:String = new String()
+	var vuelta:String = new String()
+	var ips:String = new String()
+
 	if(linea != null && linea.ordenLineaCliente != null && linea.ordenLineaCliente.size() > 0){
 		for(olp <- linea.ordenLineaCliente) {
-			pacientes += olp.cliente.nombre.toUpperCase()+" - ID:"+olp.cliente.id_paciente_rismi+"\n" 
+
+			if(olp.diagnostico != null && !olp.diagnostico.isEmpty()){
+				diagnostico = " - Diag:"+ olp.diagnostico
+			}
+			if(olp.ida_institucion_externa_id != null){
+				ida = " - Origen:"+ olp.idaInstitucionExterna.nombre
+			}
+			if(olp.vuelta_institucion_externa_id != null){
+				vuelta = " - Destino:"+ olp.vueltaInstitucionExterna.nombre
+			}
+			if(olp.fecha != null){
+				fecha = " - Fecha:"+ utils.DateUtils.formatDate(olp.fecha)
+			}
+			if(olp.ips != null){
+				if(olp.ips){
+					ips = " - IPS: SI"
+				}else{
+					ips = " - IPS: NO"
+				}
+			}
+
+			pacientes += olp.cliente.nombre.toUpperCase()+" - ID:"+olp.cliente.id_paciente_rismi+fecha+ diagnostico+ida+vuelta+ips+"\n"
 		}
 	}
 	pacientes
 }
 
-					
+
 
 <tr data-id="@linea.id">
 	@if(editable){
@@ -33,7 +60,7 @@
 				<i class="glyphicon glyphicon-user"></i></div>
 			}
 		</td>
-		 
+
 	}else{
 		@if(linea != null && linea.ordenLineaCliente != null && linea.ordenLineaCliente.size() > 0){
 			<td><div class='tip-top pointer' title='@getPacientes(linea)'><i class="glyphicon glyphicon-user"></i></div></td>
