--- a/app/views/compras/solicitudes/verSolicitud.scala.html
+++ b/app/views/compras/solicitudes/verSolicitud.scala.html
@@ -187,7 +187,7 @@
 	<div class="row">
 		<div class="col-sm-2">
 			<div class="form-group">
-				<label for="inputFechaStart" class="control-label">Fecha Translado</label>
+				<label for="inputFechaStart" class="control-label">Fecha Traslado</label>
 				<p class="form-control-static form-control">@solicitudForm("fecha_viaje").value</p>
 			</div>
 		</div>
