--- a/app/views/rrhh/agenteAsistenciaLicencia/lineaAgenteAsistenciaLicencia.scala.html
+++ b/app/views/rrhh/agenteAsistenciaLicencia/lineaAgenteAsistenciaLicencia.scala.html
@@ -34,7 +34,7 @@
 	<td>@if(linea.fpresentacion != null){@(utils.DateUtils.formatDate(linea.create_date))}</td>
 	<td>@if(linea.finicio != null){@(utils.DateUtils.formatDate(linea.finicio))}</td>
 	<td>@if(linea.ffin != null){@(utils.DateUtils.formatDate(linea.ffin))}</td>
-	<td>@if(linea.dias !=null){@linea.dias}else{@linea.getDiasEntreFechas()}</td>
+	<td>@if(linea.dias !=null){@linea.dias}else{}</td>
 	<td>@linea.ejercicio.nombre</td>
 	<td>@linea.nota</td>
 	<td>@linea.create_usuario.nombre</td>
