--- a/app/views/recupero/recuperoCertificadoDeuda/verCertificadoDeuda.scala.html
+++ b/app/views/recupero/recuperoCertificadoDeuda/verCertificadoDeuda.scala.html
@@ -79,7 +79,7 @@
 			<label class="control-label">Monto</label>
 			<p class="form-control-static form-control">@utils.NumberUtils.moneda(certificado.monto, 2)</p>
 		</div>
-
-
 	</div>
+
+	@views.html.recupero.recuperoCertificadoDeuda.tabsRecuperoCertificadoDeuda(false, certificadoForm,certificado)
 }
