--- a/app/views/recupero/recuperoCertificadoDeuda/editarCertificadoDeuda.scala.html
+++ b/app/views/recupero/recuperoCertificadoDeuda/editarCertificadoDeuda.scala.html
@@ -57,7 +57,7 @@
 
 		@inputText(certificadoDeudaForm("id"), 'hidden -> "hidden")
 		@views.html.recupero.recuperoCertificadoDeuda.formCertificadoDeuda(certificadoDeudaForm)
-
+		@views.html.recupero.recuperoCertificadoDeuda.tabsRecuperoCertificadoDeuda(true, certificadoDeudaForm)
 		<div class="row margin-bottom-25">
 
 		</div>
