--- a/app/views/recupero/recuperoCertificadoDeuda/indexCertificadoDeuda.scala.html
+++ b/app/views/recupero/recuperoCertificadoDeuda/indexCertificadoDeuda.scala.html
@@ -7,6 +7,17 @@
 	<script src="@routes.Assets.at("javascripts/recupero/planilla.js")" type="text/javascript"></script>
 }
 
+@getClassEstado(i:Estado) = @{
+	var classEstado:String = new String()
+	if(i != null && i.id == 136){
+		classEstado = "borrador"
+	}else if(i != null && i.id == 137){
+		classEstado = "autorizado"
+	}
+	classEstado
+
+}
+
 @views.html.recupero.mainRecupero("Lista de Certificado Deuda", scripts) {
 
 <div class="page-header">
@@ -91,7 +102,7 @@
     	<table id="listaPlanillas" class="table table-striped table-bordered">
 			<thead>
 				<tr style="background: #FFFFFF;">
-			        <td colspan="7">Mostrando @buscador.getDisplayXtoYofZ(" a "," de ") resultado(s). </td>
+			        <td colspan="8">Mostrando @buscador.getDisplayXtoYofZ(" a "," de ") resultado(s). </td>
 			    </tr>
 				<tr>
 					<th width="10"><input type="checkbox" name="checkAll" id="checkAll"/></th>
@@ -101,13 +112,14 @@
 					<th>Cliente</th>
 					<th width="50">Fecha</th>
 					<th>Expediente</th>
+					<th width="100">Estado</th>
 					<th width="30">#</th>
 				</tr>
 			</thead>
 			<tbody>
 			@for(planilla <- buscador.getList) {
 
-				<tr class="pointer" data-estado="" data-href="@controllers.recupero.routes.RecuperoCertificadoDeudaController.ver(planilla.id)&@UriTrack.encode()">
+				<tr class="pointer @getClassEstado(planilla.estado)" data-estado="" data-href="@controllers.recupero.routes.RecuperoCertificadoDeudaController.ver(planilla.id)&@UriTrack.encode()">
 					<td><input type="checkbox" name="check_listado[]" value="@planilla.id" class="notSeleccion" id="check-@planilla.id"/></td>
 					<td><a class="btn btn-default btn-xs notSeleccion" href="@controllers.recupero.routes.RecuperoCertificadoDeudaController.editar(planilla.id)&@UriTrack.encode()"><i class="glyphicon glyphicon-edit"></i></a></td>
 
@@ -115,7 +127,7 @@
 					<td>@(planilla.cliente.nombre)</td>
 					<td class="fecha">@if(planilla.fecha != null){@(utils.DateUtils.formatDate(planilla.fecha))}</td>
 					<td>@if(planilla.expediente != null){@(planilla.expediente.getExpedienteEjercicio())}</td>
-
+					<td class="estado" align="center">@if(planilla.estado != null){ @(planilla.estado.nombre)}</td>
 					<td>
 						<a class="btn btn-default btn-xs delete-confirm-link notSeleccion" href="@controllers.recupero.routes.RecuperoCertificadoDeudaController.eliminar(planilla.id)&@UriTrack.encode()">
 							<i class="glyphicon glyphicon-trash icono-eliminar"></i>
@@ -127,7 +139,7 @@
 	        </tbody>
 	        <tfoot>
 		        <tr>
-			        <td colspan="7">&nbsp</td>
+			        <td colspan="8">&nbsp</td>
 
 		        </tr>
 	        </tfoot>
