--- a/app/views/recupero/recuperoCerficadoDeudaLineas/indexRecuperoCerficadoDeudaLinea.scala.html
+++ b/app/views/recupero/recuperoCerficadoDeudaLineas/indexRecuperoCerficadoDeudaLinea.scala.html
@@ -15,8 +15,9 @@
 		<thead>
 			<tr>
 
-				<th>Factura</th>
-				<th>Deuda</th>
+				<th width="200">N° Factura</th>
+				<th width="100">Fecha</th>
+				<th style="text-align: center;">Deuda</th>
 				@if(editable){
 					<th  width="30"></th>
 				}
