--- a/app/views/recupero/recuperoCerficadoDeudaLineas/lineaProducto.scala.html
+++ b/app/views/recupero/recuperoCerficadoDeudaLineas/lineaProducto.scala.html
@@ -6,8 +6,9 @@
 	}
 
 	<td>@if(linea.recuperoFactura != null ){@linea.recuperoFactura.getNumeroFactura()}</td>
+	<td>@if(linea.recuperoFactura != null){@(utils.DateUtils.formatDate(linea.recuperoFactura.fecha))}</td>
 
-	<td>@utils.NumberUtils.moneda(linea.deuda, 2)</td>
+	<td style="text-align: center;">@utils.NumberUtils.moneda(linea.deuda, 2)</td>
 
 	@if(editable){
 		<td><a class="btn btn-default btn-xs eliminarProducto delete-confirm-link" href="@controllers.recupero.routes.RecuperoCertificadoDeudaLineasController.eliminar(linea.id)"><i class="glyphicon glyphicon-trash icono-eliminar"></i></a></td>
