--- a/app/views/haberes/liquidacionMeses/verLiquidacionMes.scala.html
+++ b/app/views/haberes/liquidacionMeses/verLiquidacionMes.scala.html
@@ -329,12 +329,12 @@
 							</div>
 
 							<div class="col-sm-12 margin-bottom-25">
-								<a id="exportEmbargo" data-url="@controllers.haberes.routes.LiquidacionAccionesController.exportEmbargos(lc.id,true,false)"  class="btn btn-default">
+								<a id="exportEmbargoEspera" data-url="@controllers.haberes.routes.LiquidacionAccionesController.exportEmbargos(lc.id,true,false)"  class="btn btn-default">
 								<i class="glyphicon glyphicon-floppy-open"></i>EMBARGOS MACRO POST-ESPERA</a>
 
 							</div>
 							<div class="col-sm-12 margin-bottom-25">
-								<a id="exportEmbargoExterno" data-url="@controllers.haberes.routes.LiquidacionAccionesController.exportEmbargosExternos(lc.id,true,false)"  class="btn btn-default">
+								<a id="exportEmbargoExternoEspera" data-url="@controllers.haberes.routes.LiquidacionAccionesController.exportEmbargosExternos(lc.id,true,false)"  class="btn btn-default">
 								<i class="glyphicon glyphicon-floppy-open"></i>EMBARGOS EXTERNOS POST-ESPERA</a>
 							</div>
 
