--- a/app/views/recupero/informes/informeGeneral.scala.html
+++ b/app/views/recupero/informes/informeGeneral.scala.html
@@ -53,12 +53,7 @@ $( function() {
 
 
 
-@if(flash.containsKey("success")) {
-	<div class="alert alert-success"><i class="glyphicon glyphicon-ok-sign"></i> @flash.get("success")</div>
-}
-@if(flash.containsKey("error")) {
-	<div class="alert alert-danger"><i class="glyphicon glyphicon-remove-sign"></i> @flash.get("error")</div>
-}
+@views.html.tags.successError()
 
 
     <form action="" method="GET" id="filtroInforme">
