--- a/app/views/recupero/informes/informePagos.scala.html
+++ b/app/views/recupero/informes/informePagos.scala.html
@@ -186,7 +186,8 @@
 				<tr>
 				    <th width="20"><input type="checkbox" name="checkAll" id="checkAll"/></th>
 				    <th width="80">Institucion</th>
-					<th width="120">Número</th>
+					<th width="120">Factura</th>
+					<th width="120">Recibo</th>
 					<th width="60">Fecha</th>
 					<th>Cliente</th>
 					<th width="90">Total factura</th>
@@ -201,6 +202,7 @@
 					<td>
 						@informe.numero
 					</td>
+					<td>@if(informe.recuperoRecibo != null){@informe.recuperoRecibo.getNumeroRecibo()}</td>
 					<td>@DateUtils.formatDate(informe.fecha)</td>
 					<td>@informe.cliente.nombre</td>
 					<td class="totalFactura" data-valor="@informe.recupero_factura.getTotal()">@utils.NumberUtils.moneda(informe.recupero_factura.getTotal())</td>
