--- a/app/views/recupero/recuperoCertificadoDeuda/tabsRecuperoCertificadoDeuda.scala.html
+++ b/app/views/recupero/recuperoCertificadoDeuda/tabsRecuperoCertificadoDeuda.scala.html
@@ -67,7 +67,7 @@
 
 									<div class="col-sm-3">
 										<a href="@controllers.recupero.routes.RecuperoCertificadoDeudaController.cambiarEstado(recuperoCertificadoDeudaForm.field("id").value.toInt,models.Estado.RECUPERO_CERTIFICADO_DEUDA_APROBADO )@UriTrack.get("&")" class="btn btn-default">
-											<i class="glyphicon glyphicon-arrow-right"></i>Volver a Aprobado
+											<i class="glyphicon glyphicon-arrow-right"></i>Pasar a Aprobado
 										</a>
 									</div>
 								}
