--- a/app/views/recupero/recuperoCertificadoDeuda/verCertificadoDeuda.scala.html
+++ b/app/views/recupero/recuperoCertificadoDeuda/verCertificadoDeuda.scala.html
@@ -76,10 +76,10 @@
 			<label class="control-label">Fecha</label>
 			<p class="form-control-static form-control">@certificadoForm.field("fecha").value</p>
 		</div>
-		<div class="col-sm-2">
+		<!-- <div class="col-sm-2">
 			<label class="control-label">Monto</label>
 			<p class="form-control-static form-control">@utils.NumberUtils.moneda(certificado.monto, 2)</p>
-		</div>
+		</div> -->
 	</div>
 
 	@views.html.recupero.recuperoCertificadoDeuda.tabsRecuperoCertificadoDeuda(false, certificadoForm,certificado)
