--- a/app/views/recupero/recuperoCertificadoDeuda/verCertificadoDeuda.scala.html
+++ b/app/views/recupero/recuperoCertificadoDeuda/verCertificadoDeuda.scala.html
@@ -22,6 +22,7 @@
 			    <span class="caret"></span>
 			  </button>
 			  <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+			 	<li><a id="reporteCartaDocumento" href="@controllers.recupero.routes.RecuperoCertificadoDeudaController.reporteCartaDocumento(certificado.id)">Carta Documento</a></li>
 			  	<li><a id="reporteDispoCertificadoDeuda" href="@controllers.recupero.routes.RecuperoCertificadoDeudaController.reporteDispoCertificadoDeuda(certificado.id)">Disposicion</a></li>
 			  	<li><a id="reporteCertificadoDeuda" href="@controllers.recupero.routes.RecuperoCertificadoDeudaController.reporteCertificadoDeuda(certificado.id)">Certificado Deuda</a></li>
 			  </ul>
