--- a/app/views/haberes/puestosLaborales/verPuestoLaboral.scala.html
+++ b/app/views/haberes/puestosLaborales/verPuestoLaboral.scala.html
@@ -278,6 +278,7 @@
 			  <li class="list-group-item"><a href="@controllers.haberes.routes.PuestosLaboralesReportesController.formulario6492022(lc.id, 12)">Año 2021</a></li>
 			  <li class="list-group-item"><a href="@controllers.haberes.routes.PuestosLaboralesReportesController.formulario6492023(lc.id, 13)">Año 2022</a></li>
 			  <li class="list-group-item"><a href="@controllers.haberes.routes.PuestosLaboralesReportesController.formulario6492024(lc.id, 14)">Año 2023</a></li>
+			  <li class="list-group-item"><a href="@controllers.haberes.routes.PuestosLaboralesReportesController.formulario6492025(lc.id, 15)">Año 2024</a></li>
 			</ul>
         </div>
         <div class="modal-footer">
