--- a/app/views/compras/clientes/modalBusquedaClientes.scala.html
+++ b/app/views/compras/clientes/modalBusquedaClientes.scala.html
@@ -1,6 +1,6 @@
 @(buscador: utils.pagination.Pagination[Cliente], formBuscador: DynamicForm)
 @import helper._
-@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) } 
+@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) }
 
 <div id="modalBusquedaClientes" class="contenedorPaginador ajaxPaginador">
 <form action="@controllers.compras.routes.ClientesController.modalBuscar()" method="GET">
@@ -8,10 +8,15 @@
 		<div class="col-sm-6">
 			<label class="control-label">Nombre</label>
 			@inputText(formBuscador("nombre"), 'class -> "form-control", 'autofocus -> "autofocus")
-			
+
 		</div>
 		<div class="col-sm-3">
-			<label class="control-label">&nbsp 
+			<label class="control-label">Cuit</label>
+			@inputText(formBuscador("cuit"), 'class -> "form-control")
+
+		</div>
+		<div class="col-sm-3">
+			<label class="control-label">&nbsp
 			<button class="btn btn-primary form-control">Buscar</button>
 			</label>
 		</div>
@@ -23,31 +28,33 @@
 	    <em>No se encuentran clientes</em>
 	</div>
 } else {
-    Mostrando @buscador.getDisplayXtoYofZ(" a "," de ") resultado(s). 
-    	
+    Mostrando @buscador.getDisplayXtoYofZ(" a "," de ") resultado(s).
+
 	<table class="table table-striped table-bordered table-hover">
 		<thead>
 			<tr>
 				<th>Nombre</th>
+				<th>CUIT</th>
 				<th>DNI</th>
 				<th>ID-Rismi</th>
 			</tr>
 		</thead>
 		<tbody>
-    	
+
     @for(cliente <- buscador.getList) {
 	<tr data-id="@cliente.id" class="modalSeleccionClientes">
 		<td>@cliente.nombre</td>
+		<td>@if(cliente.cuit2 != null){@cliente.cuit2}</td>
 		<td>@if(cliente.dni != null){@cliente.dni}</td>
 		<td>@if(cliente.id_paciente_rismi != null){@cliente.id_paciente_rismi}</td>
-	</tr>    
+	</tr>
     }
     </tbody>
     </table>
-    
+
 	<div class="pagination pull-right">
 	    @views.html.helpers.paginador(buscador, controllers.compras.routes.ClientesController.modalBuscar())
-	</div>	
+	</div>
 }
 </div>
 
@@ -64,7 +71,7 @@ $( function(){
 				alert(data.message);
 		});
 	});
-	
+
 	contenedor.find('form').on('submit', function(){
 		var url = $(this).attr("action");
 		var query = $(this).serialize();
