--- a/app/views/rrhh/mainRrhh.scala.html
+++ b/app/views/rrhh/mainRrhh.scala.html
@@ -13,7 +13,7 @@
 				@if(Componente.check("agentes") && Permiso.check("agentesLicencias")) {
 
 					<li><a href="@controllers.rrhh.routes.AgentesAsistenciasController.index()">Licencias</a></li>
-					<!-- <li><a href="@controllers.rrhh.routes.AgentesAsistenciasLicenciasController.getListaLicenciasPendientes()">Licencias Pendientes</a></li> -->
+					<li><a href="@controllers.rrhh.routes.AgentesAsistenciasLicenciasController.getListaLicenciasPendientes()">Licencias Pendientes</a></li>
 					<li><a href="@controllers.rrhh.routes.AgentesAsistenciasLicenciasController.getListaLicenciasEnFecha()">Licencias en Fecha</a></li>
 
 					<li><a href="@controllers.rrhh.routes.AgentesAsistenciasLicenciasController.indexLicenciaNovedadesLiquidacion()">Licencias por Periodos</a></li>
